Several fixes  - When speed is set while paused, upon resume the speed is now accurate  - Popup arrow opacity matches the rest of the box styling  - Clicking multiple overlapping points no longer results in an error of layers/srcs attempting to be removed that have not yet been added.

--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,11 @@ body { margin: 0; padding: 0; }
   background: rgba(255, 255, 255, 0.8);
   padding: 0px;
 }
+
+.mapboxgl-popup-anchor-bottom .mapboxgl-popup-tip {
+  border-top-color: rgba(255, 255, 255, 0.8);
+}
+
 .popup {
   min-width: 230px;
   max-width: none;
